--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,16 +22,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: taiki-e/install-action@v2
-        with: { tool: "just,cargo-semver-checks" }
+        with: { tool: "just" }
       - uses: actions/checkout@v4
       - uses: Swatinem/rust-cache@v2
         if: github.event_name != 'release' && github.event_name != 'workflow_dispatch'
       - name: Build
         run: cargo build --verbose
       - run: just ci-test
-      - name: Check if changes break public API and require a new version
-        run: just semver-checks
-
+      - name: Check if changes break public API and need a new version. Use `just semver-checks` to run locally.
+        uses: obi1kenobi/cargo-semver-checks-action@v2
   msrv:
     name: Test MSRV
     runs-on: ubuntu-latest
